# logster

./: .gitignore  CHANGELOG.md  README.md  logster.toml  pyproject.toml
logster/: __init__.py  cli.py  config.py  format.py  manage.py
logster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli.py  test_format.py  test_manage_cli.py
